Try to fix weird bug with portfolio page on mobile

--- a/src/portfolio/Portfolio.css
+++ b/src/portfolio/Portfolio.css
@@ -26,7 +26,7 @@
     /*min-width: 10em;*/
     width: calc(100%/4);
     margin: 0.5em;
-    filter: saturate(0);
+    /*filter: saturate(0);*/
 }
 
 .item-overlay {
@@ -68,8 +68,7 @@
 
     .portfolio-item {
         width: 100%;
-        max-height: 300px;
-        min-height: 300px;
+        height: 300px;
     }
 
     .portfolio-item:hover .item-overlay {
